--- a/app/src/main/res/layout/cehua_layout.xml
+++ b/app/src/main/res/layout/cehua_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#ffffff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <RelativeLayout
@@ -193,11 +194,11 @@
             android:text="夜间模式"
             android:textColor="@color/blackziti" />
 
-        <ImageView
-            android:layout_width="@dimen/x50"
-            android:layout_height="@dimen/y50"
+            <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@mipmap/ringht" />
+             />
     </RelativeLayout>
 
 
