--- a/app/src/main/res/layout/activity_qidong2.xml
+++ b/app/src/main/res/layout/activity_qidong2.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     tools:context="com.lenovo.bount.newsquarter.Qidong2Activity">
 <ImageView
-    android:scaleType="fitXY"
+    android:scaleType="centerCrop"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:src="@mipmap/ic_launcher"
+    android:src="@mipmap/qidong"
     />
 </RelativeLayout>
