--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -4,18 +4,15 @@
     android:orientation="horizontal"
     android:background="#03A9F4"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="@dimen/y130">
 
   <ImageView
       android:id="@+id/iv_touxiang"
-      android:layout_width="40dp"
-      android:layout_height="40dp"
+      android:layout_width="@dimen/x80"
+      android:layout_height="@dimen/y80"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
-      android:layout_alignParentTop="true"
-      android:src="@mipmap/raw_1499936862"
-      />
-
+      android:layout_centerVertical="true" />
   <TextView
       android:id="@+id/tv_title"
       android:layout_width="wrap_content"
@@ -23,11 +20,12 @@
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:text="TextView" />
+
     <ImageView
         android:id="@+id/iv_bianji"
         android:layout_alignParentRight="true"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/bianji"
         />
 </RelativeLayout>
