--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorziti">#8DA0B5</color>
     <color name="changeziti">#5FCEFF</color>
     <color name="blackziti">#000000</color>
+    <color name="whiteziti">#ffffff</color>
 </resources>
