--- a/app/src/main/res/anim/bottom_to_top_in.xml
+++ b/app/src/main/res/anim/bottom_to_top_in.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate
-        android:duration="2000"
-        android:fromXDelta="30"
-        android:fromYDelta="30"
-        android:toXDelta="-80"
-        android:toYDelta="300" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"  android:duration="1000">
+
+    <!--<alpha android:fromAlpha="0" android:toAlpha="1"> </alpha>-->
+    <translate android:fromXDelta="-100%p" android:toXDelta="0"/>
 </set>
