--- a/app/src/main/res/anim/bottom_to_top_out.xml
+++ b/app/src/main/res/anim/bottom_to_top_out.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <scale
-        android:duration="1000"
-        android:fillAfter="false"
-        android:fromXScale="0.0"
-        android:fromYScale="0.0"
-        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:toXScale="1.4"
-        android:toYScale="1.4" />
+<set xmlns:android="http://schemas.android.com/apk/res/android" android:duration="1000">
+
+    <!--<alpha android:fromAlpha="1" android:toAlpha="0"> </alpha>-->
+    <translate android:fromXDelta="0" android:toXDelta="100%p"/>
 </set>
