--- a/app/src/main/res/anim/top_to_bottom_out.xml
+++ b/app/src/main/res/anim/top_to_bottom_out.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:duration="1000"
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"  android:duration="1000">
+    <!--<alpha android:fromAlpha="1" android:toAlpha="0"> </alpha>-->
+    <translate android:fromXDelta="0" android:toXDelta="-100%p"/>
 </set>
