--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -114,14 +114,15 @@
         android:layout_below="@+id/but_log"
         android:layout_marginTop="14dp"
         android:text="忘记密码"
-        android:textColor="@color/colorziti" />
+        android:textColor="@color/colorziti"
+        android:id="@+id/textView3" />
 
     <TextView
+        android:id="@+id/tv_youke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="450dp"
         android:text="游客登录"
         android:textColor="#B5B3A1" />
 
