--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,19 +21,22 @@
                 android:layout_height="wrap_content"
                 layout="@layout/title_layout"
                 />
+
             <FrameLayout
                 android:layout_below="@+id/share"
                 android:id="@+id/fl"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/y800"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y130"
                 android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:id="@+id/linearLayout">
 
                 <LinearLayout
                     android:id="@+id/lt1"
@@ -44,7 +47,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/iv_1"
+                        android:id="@+id/iv_icon"
                         android:layout_width="@dimen/x70"
                         android:layout_height="@dimen/y70"
                         android:src="@mipmap/one" />
