--- a/app/src/main/res/layout/duanzi_frag.xml
+++ b/app/src/main/res/layout/duanzi_frag.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-        <TextView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-             android:text="段子"
             />
 </RelativeLayout>
