--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -49,7 +49,7 @@
             android:text="头像"
             />
         <ImageView
-            android:id="@+id/iv_touxiang"
+            android:id="@+id/iv_touxiang2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@mipmap/ic_launcher"
