--- a/app/src/main/res/layout/smallitem_layout.xml
+++ b/app/src/main/res/layout/smallitem_layout.xml
@@ -1,12 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-   <ImageView
-    android:id="@+id/small_iv"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/y350"
-    android:src="@mipmap/ic_launcher"
+    android:layout_height="match_parent"
+    >
 
-    />
-</LinearLayout>
+   <ImageView
+       android:visibility="gone"
+       android:id="@+id/small_iv"
+       android:layout_width="match_parent"
+       android:layout_height="@dimen/y300"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentStart="true"
+       android:layout_alignParentTop="true"
+       android:scaleType="centerCrop"
+       android:src="@mipmap/ic_launcher" />
+
+   <ImageView
+       android:visibility="gone"
+       android:id="@+id/small_iv2"
+       android:layout_width="match_parent"
+       android:layout_height="@dimen/y400"
+       android:layout_alignParentLeft="true"
+       android:layout_alignParentStart="true"
+       android:layout_alignParentTop="true"
+       android:scaleType="centerCrop"
+       android:src="@mipmap/ic_launcher" />
+
+   <ImageView
+       android:visibility="gone"
+       android:id="@+id/small_iv3"
+       android:layout_width="match_parent"
+       android:layout_height="@dimen/y500"
+       android:layout_alignParentEnd="true"
+       android:layout_alignParentRight="true"
+       android:layout_alignParentTop="true"
+       android:layout_marginEnd="7dp"
+       android:layout_marginRight="7dp"
+       android:src="@mipmap/ic_launcher"
+       android:scaleType="centerCrop"/>
+</RelativeLayout>
