--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3F51B5</color>//ActionBar
+    <color name="colorPrimaryDark">#303F9F</color>//沉浸式
     <color name="colorAccent">#FF4081</color>
     <color name="colorziti">#8DA0B5</color>
     <color name="changeziti">#5FCEFF</color>
