--- a/app/src/main/res/layout/guanzhu_layout.xml
+++ b/app/src/main/res/layout/guanzhu_layout.xml
@@ -4,17 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-  <com.stx.xhb.xbanner.XBanner
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      android:id="@+id/banner_1"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/y280"
-      app:pointsPosition="CENTER"
-      app:AutoPlayTime="3000"
-      app:isAutoPlay="true"
-   />
-   <android.support.v7.widget.RecyclerView
-       android:id="@+id/rv"
+
+   <com.jcodecraeer.xrecyclerview.XRecyclerView
+       android:id="@+id/xrecycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
