--- a/app/src/main/res/layout/smallitem_layout.xml
+++ b/app/src/main/res/layout/smallitem_layout.xml
@@ -3,9 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-
    <ImageView
-       android:visibility="gone"
+      android:visibility="gone"
        android:id="@+id/small_iv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y300"
@@ -23,14 +22,15 @@
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
+       android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
-       android:src="@mipmap/ic_launcher" />
+       />
 
    <ImageView
        android:visibility="gone"
        android:id="@+id/small_iv3"
        android:layout_width="match_parent"
-       android:layout_height="@dimen/y500"
+       android:layout_height="@dimen/y550"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
