--- a/app/src/main/res/layout/activity_guanzhu.xml
+++ b/app/src/main/res/layout/activity_guanzhu.xml
@@ -12,6 +12,7 @@
        android:src="@mipmap/guanzhu"
        android:scaleType="centerCrop"
        />
+
     <RelativeLayout
         android:id="@+id/rt_1"
         android:layout_below="@+id/iv_beijing"
@@ -19,35 +20,39 @@
         android:layout_height="@dimen/y150"
         >
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            fresco:roundAsCircle="true"
-            android:id="@+id/iv_gutx"
-            android:layout_width="@dimen/x80"
-            android:layout_height="@dimen/y80"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/guanzhu" />
+
      <LinearLayout
-         android:layout_toRightOf="@+id/iv_gutx"
-         android:layout_width="match_parent"
+         android:layout_marginLeft="@dimen/y100"
+         android:layout_width="@dimen/y400"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
          <TextView
-             android:layout_width="wrap_content"
+             android:id="@+id/fans_num"
+             android:layout_weight="1"
+             android:layout_width="0dp"
              android:layout_height="wrap_content"
-             android:text="111111  粉丝"
+             android:text="111111"
              />
-
          <TextView
-             android:layout_marginLeft="@dimen/x20"
-             android:layout_width="wrap_content"
+             android:layout_weight="1"
+             android:layout_width="0dp"
              android:layout_height="wrap_content"
-             android:text="111111  关注" />
+             android:text=" 粉丝"
+             />
+         <TextView
+             android:id="@+id/follow_num"
+             android:layout_weight="1"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:text="111111"
+             />
+         <TextView
+             android:layout_weight="1"
+             android:layout_width="0dp"
+
+             android:layout_height="wrap_content"
+             android:text="关注" />
 
      </LinearLayout>
 
@@ -75,7 +80,7 @@
 
         <RelativeLayout
             android:background="@drawable/dainzanbackgroup"
-            android:layout_width="@dimen/x90"
+            android:layout_width="@dimen/x100"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -88,8 +93,6 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="13dp"
-                android:layout_marginRight="13dp"
                 android:src="@mipmap/dianzan" />
 
             <TextView
@@ -97,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_dianzan"
+                android:layout_centerHorizontal="true"
                 android:gravity="center"
                 android:text="16" />
 
@@ -109,6 +113,17 @@
             android:layout_above="@+id/textView6"
             android:layout_centerHorizontal="true"
             android:src="@mipmap/jguanzhu" />
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/iv_gutx"
+            android:layout_width="@dimen/x80"
+            android:layout_height="@dimen/y80"
+            android:layout_above="@+id/guanzhu"
+            android:layout_marginBottom="7dp"
+            android:layout_toLeftOf="@+id/textView6"
+            android:layout_toStartOf="@+id/textView6"
+            android:src="@mipmap/guanzhu"
+            fresco:roundAsCircle="true" />
     </RelativeLayout>
     <View
         android:layout_below="@+id/rt_1"
@@ -119,7 +134,7 @@
         />
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:layout_below="@+id/view"
-        android:id="@+id/sp_xrv"
+        android:id="@+id/xrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
