--- a/app/src/main/res/layout/cehua_layout.xml
+++ b/app/src/main/res/layout/cehua_layout.xml
@@ -111,9 +111,10 @@
           android:src="@mipmap/ringht"
           />
    </RelativeLayout>
+
    <RelativeLayout
        android:padding="10dp"
-       android:id="@+id/rt4"
+       android:id="@+id/rt_sousuo"
        android:layout_below="@+id/rt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -146,7 +147,7 @@
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
-       android:layout_below="@+id/rt4"
+       android:layout_below="@+id/rt_sousuo"
        android:padding="15dp">
 
       <ImageView
