--- a/app/src/main/res/layout/spitem_layout.xml
+++ b/app/src/main/res/layout/spitem_layout.xml
@@ -3,17 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="@dimen/x350"
+   <ImageView
        android:id="@+id/rl_play"
-       android:background="#ff00"
        android:layout_margin="@dimen/x5"
-       />
-  <!--   <com.dou361.ijkplayer.widget.IjkVideoView
-       android:id="@+id/rl_play"
-       android:layout_width="0sp"
-       android:layout_weight="1"
-       android:layout_height="wrap_content" />-->
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_centerInParent="true"
+       android:scaleType="centerCrop"
+        />
 </RelativeLayout>
