--- a/app/src/main/res/layout/activity_guanzhu.xml
+++ b/app/src/main/res/layout/activity_guanzhu.xml
@@ -22,7 +22,7 @@
 
 
      <LinearLayout
-         android:layout_marginLeft="@dimen/y100"
+         android:layout_marginLeft="@dimen/y130"
          android:layout_width="@dimen/y400"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
@@ -32,7 +32,7 @@
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
-             android:text="111111"
+             android:text="11"
              />
          <TextView
              android:layout_weight="1"
@@ -45,7 +45,7 @@
              android:layout_weight="1"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
-             android:text="111111"
+             android:text="1"
              />
          <TextView
              android:layout_weight="1"
@@ -110,20 +110,13 @@
             android:id="@+id/guanzhu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView6"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_toEndOf="@+id/textView6"
+            android:layout_toRightOf="@+id/textView6"
             android:src="@mipmap/jguanzhu" />
 
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/iv_gutx"
-            android:layout_width="@dimen/x80"
-            android:layout_height="@dimen/y80"
-            android:layout_above="@+id/guanzhu"
-            android:layout_marginBottom="7dp"
-            android:layout_toLeftOf="@+id/textView6"
-            android:layout_toStartOf="@+id/textView6"
-            android:src="@mipmap/guanzhu"
-            fresco:roundAsCircle="true" />
     </RelativeLayout>
     <View
         android:layout_below="@+id/rt_1"
@@ -138,5 +131,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/iv_gutx"
+        android:layout_width="@dimen/x100"
+        android:layout_height="@dimen/y100"
+        android:layout_above="@+id/view"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="44dp"
+        android:src="@mipmap/guanzhu"
+        fresco:roundAsCircle="true" />
 
 </RelativeLayout>
