--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,12 @@
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
+        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
