--- a/app/src/main/res/layout/activity_pbvideo1.xml
+++ b/app/src/main/res/layout/activity_pbvideo1.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentTop="true">
 
         <ImageView
-            android:id="@+id/iv_1"
+            android:id="@+id/iv_animation"
             android:layout_width="@dimen/x50"
             android:layout_height="@dimen/y50"
             android:layout_alignParentLeft="true"
