--- a/app/src/main/res/layout/activity_shezhi.xml
+++ b/app/src/main/res/layout/activity_shezhi.xml
@@ -142,7 +142,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/x120"
-        android:id="@+id/relativeLayout5">
+        android:id="@+id/clear_rt">
         <TextView
             android:id="@+id/she_tv_huancun"
             android:gravity="center"
@@ -173,7 +173,7 @@
     </RelativeLayout>
 
     <View
-        android:layout_below="@+id/relativeLayout5"
+        android:layout_below="@+id/clear_rt"
         android:layout_width="match_parent"
         android:layout_height="@dimen/y40"
         android:background="#EBEBEB"
@@ -185,7 +185,7 @@
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/rt_2"
         android:layout_alignRight="@+id/rt_2"
-        android:layout_below="@+id/relativeLayout5"
+        android:layout_below="@+id/clear_rt"
         android:layout_marginTop="21dp"
         android:background="@drawable/redbackgroup"
         android:text="退出登录"
