--- a/app/src/main/res/layout/activity_sousuo.xml
+++ b/app/src/main/res/layout/activity_sousuo.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.lenovo.bount.newsquarter.activitybao.SousuoActivity">
     <RelativeLayout
-        android:id="@+id/rt_1"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/y80"
+     android:id="@+id/rt_1"
+     android:layout_width="match_parent"
+     android:layout_height="@dimen/y80"
      android:background="@color/changeziti"
     >
     <ImageView
@@ -19,7 +19,7 @@
 
         />
         <TextView
-            android:textSize="@dimen/y25"
+            android:textSize="@dimen/y35"
             android:layout_toRightOf="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/y50"
@@ -28,7 +28,7 @@
             />
 
         <TextView
-            android:textSize="@dimen/y25"
+            android:textSize="@dimen/y35"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/y50"
             android:layout_alignParentTop="true"
@@ -37,41 +37,40 @@
             android:text="搜索钟友" />
 </RelativeLayout>
     <RelativeLayout
+        android:layout_marginTop="@dimen/y40"
       android:background="@drawable/biankuangbackgroup3"
         android:id="@+id/rt_2"
         android:layout_below="@+id/rt_1"
         android:layout_width="@dimen/y600"
-        android:layout_height="@dimen/y60"
+        android:layout_height="@dimen/y80"
         >
         <ImageView
             android:id="@+id/soussuo"
             android:layout_width="@dimen/x50"
             android:layout_height="@dimen/y50"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginLeft="9dp"
+            android:layout_marginStart="9dp"
             android:src="@mipmap/sousuo" />
         <EditText
             android:layout_toRightOf="@+id/soussuo"
             android:layout_marginLeft="@dimen/y20"
             android:id="@+id/et_content"
             android:layout_width="@dimen/y600"
-            android:layout_height="@dimen/y50"
+            android:layout_height="@dimen/y80"
             android:layout_alignParentTop="true"
             android:background="@null"
             android:hint="输入id或者钟友名"
             />
-
     </RelativeLayout>
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="@dimen/y50"
+        android:layout_above="@+id/sousuo_xrv"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/rt_1"
         android:text="取消" />
   <com.jcodecraeer.xrecyclerview.XRecyclerView
       android:layout_below="@+id/rt_2"
