--- a/app/src/main/res/layout/cehua_layout.xml
+++ b/app/src/main/res/layout/cehua_layout.xml
@@ -56,8 +56,9 @@
            android:textColor="#ffffff" />
    </RelativeLayout>
   <RelativeLayout
+      android:background="?android:attr/selectableItemBackground"
       android:padding="10dp"
-      android:id="@+id/rt2"
+      android:id="@+id/rt_guanzhu"
       android:layout_below="@+id/rt1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -84,9 +85,10 @@
          />
   </RelativeLayout>
    <RelativeLayout
+       android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:id="@+id/rt3"
-       android:layout_below="@+id/rt2"
+       android:layout_below="@+id/rt_guanzhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
@@ -113,6 +115,7 @@
    </RelativeLayout>
 
    <RelativeLayout
+       android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:id="@+id/rt_sousuo"
        android:layout_below="@+id/rt3"
@@ -142,6 +145,7 @@
    </RelativeLayout>
 
    <RelativeLayout
+       android:background="?android:attr/selectableItemBackground"
        android:id="@+id/rt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -176,7 +180,7 @@
         android:id="@+id/rt6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/relativeLayout2"
+        android:layout_above="@+id/rt_myzp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="34dp">
@@ -207,12 +211,13 @@
 
 
     <RelativeLayout
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/relativeLayout2">
+        android:id="@+id/rt_myzp">
 
         <ImageView
             android:id="@+id/iv_6"
@@ -232,11 +237,12 @@
 
 
     <RelativeLayout
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/relativeLayout2"
+        android:layout_alignTop="@+id/rt_myzp"
         android:id="@+id/relativeLayout4">
 
         <ImageView
