--- a/app/src/main/res/layout/duanzi_item.xml
+++ b/app/src/main/res/layout/duanzi_item.xml
@@ -18,17 +18,6 @@
             android:layout_height="@dimen/x70"
             android:src="@mipmap/ic_launcher"
             />
-
-
-        <!-- <com.facebook.drawee.view.SimpleDraweeView
-             android:id="@+id/iv"
-             fresco:roundAsCircle="true"
-             android:layout_width="@dimen/x41"
-             android:layout_height="@dimen/y41"
-             android:padding="@dimen/x5"
-             app:placeholderImage="@drawable/head"
-             android:layout_marginTop="@dimen/y20"
-             />-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -130,7 +119,7 @@
 
 
         <ImageView
-            android:id="@+id/iv_1"
+            android:id="@+id/iv_animation"
             android:layout_width="@dimen/x70"
             android:layout_height="@dimen/y70"
             android:src="@mipmap/icon_open"
