--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,26 @@
                             android:layout_height="wrap_content"
                             android:text="视频" />
                     </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/lt4"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_4"
+                            android:layout_width="@dimen/x70"
+                            android:layout_height="@dimen/x70"
+                            android:src="@mipmap/find" />
+
+                        <TextView
+                            android:id="@+id/tv_4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="发现" />
+                    </LinearLayout>
                 </LinearLayout>
 
         </RelativeLayout>
