--- a/app/src/main/res/layout/activity_publish_joke.xml
+++ b/app/src/main/res/layout/activity_publish_joke.xml
@@ -70,7 +70,7 @@
         android:src="@mipmap/add"
         android:layout_marginLeft="50px"/>
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/rt_4"
         android:layout_below="@+id/iv_tupain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
