--- a/app/src/main/res/layout/cehua_layout.xml
+++ b/app/src/main/res/layout/cehua_layout.xml
@@ -12,7 +12,8 @@
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/cehua">
-      <ImageView
+      <com.facebook.drawee.view.SimpleDraweeView
+          fresco:roundAsCircle="true"
           android:id="@+id/iv_tou"
           android:layout_width="@dimen/x80"
           android:layout_height="@dimen/y80"
@@ -87,7 +88,7 @@
    <RelativeLayout
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
-       android:id="@+id/rt3"
+       android:id="@+id/rt_shoucang"
        android:layout_below="@+id/rt_guanzhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -118,7 +119,7 @@
        android:background="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:id="@+id/rt_sousuo"
-       android:layout_below="@+id/rt3"
+       android:layout_below="@+id/rt_shoucang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
