--- a/app/src/main/res/layout/duanzi_frag.xml
+++ b/app/src/main/res/layout/duanzi_frag.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     >
     <com.jcodecraeer.xrecyclerview.XRecyclerView
-                android:id="@+id/rv"
+                android:id="@+id/rt_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
